[metadata]
name = dora
version = 4.0.0
description = Development-Oriented Real-time Analysis
url = https://github.com/jkrasting/dora
author = John Krasting
author_email = john.krasting@noaa.gov
keywords = climate model development analysis
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **DORA** is a Flask-based web application for analyzing climate
    model results in real-time.

    More Information
    ----------------
    - Source code: `<http://github.com/jkrasting/dora>`_

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    dora
